# SUSML

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Transition.hpp  common.hpp  factory.hpp  minimal.hpp  optimized.hpp  susml.hpp  tuplebased.hpp  vectorbased.hpp
.github/workflows/: main.yml
dataoriented/: StateMachine.hpp
minimal/: StateMachine.hpp  factory.hpp
src/: susml.hpp
tst/: StateMachineTest.cpp  basic.cpp  basic.gtest.cpp  basic.test.cpp  benchmarkTupleBasedCompilation.sh  bigmachine.bench.cpp  circle32.bench.cpp  circle64.bench.cpp  circleBench.util.hpp  circleUpTo16.bench.cpp  circleUpTo32.bench.cpp  composite.gtest.cpp  composite.test.cpp  dataoriented.test.cpp  encoder.bench.cpp  encoderEventBased.bench.cpp  encoderGuardBased.bench.cpp  factory.minimal.test.cpp  factory.test.cpp  main.bench.cpp  minimal.test.cpp  optimized.gtest.cpp  tuplebased.compiletest.cpp  tuplebased.gtest.cpp  tuplebased.test.cpp  vectorbased.test.cpp
tuplebased/: StateMachine.hpp
